--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.datasource.url=jdbc:mysql://localhost:3306/instadb
-spring.datasource.username=user
-spring.datasource.password=123
+spring.datasource.username=sergey
+spring.datasource.password=468
+upload.path=/media/images
 
 
