--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/instadb
-spring.datasource.username=sergey
-spring.datasource.password=468
-upload.path=/media/images
-<<<<<<< HEAD
-=======
+spring.datasource.username=admin
+spring.datasource.password=admin
+upload.path=/home/user129/Pictures
 
->>>>>>> 3cea150962f9bf18eb4903a7844858067eee09d7
 
