User-message linked

--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -2,8 +2,8 @@
 # MAIL
 ###################
 
-mail.host=smtp.gmail.com
-mail.port=587
-mail.userName=mail@gmail.com
-mail.password=root123
+mail.host=smtp.yandex.ru
+mail.port=465
+mail.userName=test-sergey-mail@yandex.ru
+mail.password=2346780
 mail.from=instaproject.com
