--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/instadb
+spring.datasource.url=jdbc:mysql://localhost:3306/instadb?characterEncoding=UTF-8
 spring.datasource.username=admin
 spring.datasource.password=admin
 upload.path=/home/user129/Pictures
