--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
             <version>${jmail.version}</version>
         </dependency>
 
+        <!--javax.servlet-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <properties>
