отключил почту по умолчанию

--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -2,6 +2,7 @@
 # MAIL
 ###################
 
+mail.enabled=false
 mail.host=smtp.yandex.ru
 mail.port=465
 mail.userName=test-sergey-mail@yandex.ru
