--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.servlet.multipart.max-file-size=512KB
+spring.servlet.multipart.max-file-size=2MB
 spring.jpa.show-sql=false
 spring.datasource.url=jdbc:mysql://localhost:3306/instadb
 spring.datasource.username=sergey
