--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=2MB
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.datasource.url=jdbc:mysql://localhost:3306/instadb
-spring.datasource.username=sergey
-spring.datasource.password=468
+spring.datasource.username=admin
+spring.datasource.password=admin
 upload.path=/media/images
 
 
