--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=2MB
 spring.jpa.show-sql=false
-spring.datasource.url=jdbc:mysql://localhost:3306/instadb
+spring.datasource.url=jdbc:mysql://localhost:3306/instadb?characterEncoding=UTF-8
 spring.datasource.username=sergey
 spring.datasource.password=468
 upload.path=/media/images
